--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -30,11 +30,11 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
 
-    - uses: actions/checkout@master
     - uses: awact/s3-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
+        SOURCE_DIR: './build'
         AWS_REGION: 'ap-northeast-2'
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
